Fixed command alignment

--- a/src/VanillaTerminal.css
+++ b/src/VanillaTerminal.css
@@ -13,95 +13,120 @@
   padding: 0.75em 1em;
 }
 
-  .VanillaTerm .container {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-  }
-    .VanillaTerm .container ::selection {
-      background-color: #1e496c;
-      text-shadow: none !important;
-    }
+.VanillaTerm .container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+.VanillaTerm .container ::selection {
+  background-color: #1e496c;
+  text-shadow: none !important;
+}
 
-    .VanillaTerm output {
-      clear: both;
-      line-height: 1.25em;
-      width: 100%;
-    }
-      .VanillaTerm output pre {
-        white-space: pre-wrap;
-        white-space: -moz-pre-wrap;
-        white-space: -pre-wrap;
-        white-space: -o-pre-wrap;
-        word-wrap: break-word;
-        margin: 0;
-      }
-      .VanillaTerm output span {
-        display: block;
-        font-weight: normal;
-        color: #dddddd;
-      }
+.VanillaTerm output {
+  clear: both;
+  line-height: 1.25em;
+  width: 100%;
+}
+.VanillaTerm output pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  margin: 0;
+}
+.VanillaTerm output span {
+  display: block;
+  font-weight: normal;
+  color: #dddddd;
+}
 
-    .VanillaTerm .prompt, .VanillaTerm a {
-      color: #449DFF;
-      font-weight: bold;
-    }
+.VanillaTerm .prompt,
+.VanillaTerm a {
+  color: #449dff;
+  font-weight: bold;
+}
 
-    .VanillaTerm .prompt {
-      line-height: 1.25em;
-      margin-right: 0.5em;
-    }
+.VanillaTerm .prompt {
+  line-height: 1.25em;
+  margin-right: 0.5em;
+  margin-top: 0.36em;
+}
 
-    .VanillaTerm .command {
-      display: flex;
-    }
+.VanillaTerm .command {
+  display: flex;
+}
 
-      .VanillaTerm .command.input .prompt {
-        color: white;
-        font-weight: normal;
-      }
+.VanillaTerm .command p {
+  margin-top: 0.36em;
+}
 
-      .VanillaTerm .command.idle .input {
-        display: none;
-      }
+.VanillaTerm .command.input .prompt {
+  color: white;
+  font-weight: normal;
+}
 
-      .VanillaTerm .command.hidden .prompt {
-        display: none;
-      }
+.VanillaTerm .command.idle .input {
+  display: none;
+}
 
-      .VanillaTerm .command.hidden .input {
-        max-width: 1px;
-      }
+.VanillaTerm .command.hidden .prompt {
+  display: none;
+}
 
-      .VanillaTerm .command .input {
-        background-color: transparent;
-        border: none;
-        color: inherit;
-        font: inherit;
-        flex: 1;
-        margin: 0;
-        outline: none;
-        padding: 0;
-      }
+.VanillaTerm .command.hidden .input {
+  max-width: 1px;
+}
 
-      .VanillaTerm .command .spinner:before {
-        display: inline-block;
-        content: '⠋';
-        animation: spin 1s linear infinite;
-        vertical-align: middle;
-        margin-right: 10px;
-      }
+.VanillaTerm .command .input {
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  font: inherit;
+  flex: 1;
+  margin: 0;
+  outline: none;
+  padding: 0;
+}
 
+.VanillaTerm .command .spinner:before {
+  display: inline-block;
+  content: "⠋";
+  animation: spin 1s linear infinite;
+  vertical-align: middle;
+  margin-right: 10px;
+}
 
 @keyframes spin {
-   0% { content: '⠋' }
-  10% { content: '⠙' }
-  20% { content: '⠹' }
-  30% { content: '⠸' }
-  40% { content: '⠼' }
-  50% { content: '⠴' }
-  60% { content: '⠦' }
-  70% { content: '⠧' }
-  80% { content: '⠇' }
-  90% { content: '⠏' }
+  0% {
+    content: "⠋";
+  }
+  10% {
+    content: "⠙";
+  }
+  20% {
+    content: "⠹";
+  }
+  30% {
+    content: "⠸";
+  }
+  40% {
+    content: "⠼";
+  }
+  50% {
+    content: "⠴";
+  }
+  60% {
+    content: "⠦";
+  }
+  70% {
+    content: "⠧";
+  }
+  80% {
+    content: "⠇";
+  }
+  90% {
+    content: "⠏";
+  }
 }
